--- a/Notebooks_EN/01_Linear_Algebra/02_Systems_of_Linear_Equations/LA_SoLE_Gauss_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/02_Systems_of_Linear_Equations/LA_SoLE_Gauss_en.ipynb
@@ -15,10 +15,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 3,
       "metadata": {
         "id": "1IRfisGRaXSw",
-        "outputId": "bafebd12-c3a4-4ace-80fe-0c8737c1adf9",
+        "outputId": "ef78d2a5-6543-43e9-b3bc-88da593854c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 152
@@ -788,11 +788,11 @@
       ],
       "metadata": {
         "id": "9xXGQHHqwIUT",
-        "outputId": "7b63e20b-fb1d-43c2-b99a-a1a525416aea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 152
-        }
+        },
+        "outputId": "7b63e20b-fb1d-43c2-b99a-a1a525416aea"
       },
       "execution_count": 41,
       "outputs": [
@@ -834,12 +834,12 @@
         "p.multiply_row(3,3/4)"
       ],
       "metadata": {
-        "id": "BR7RQrDy2xWe",
-        "outputId": "898c0c58-7c4f-43f2-bb4a-964a7443f079",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 152
-        }
+        },
+        "id": "BR7RQrDy2xWe",
+        "outputId": "898c0c58-7c4f-43f2-bb4a-964a7443f079"
       },
       "execution_count": 42,
       "outputs": [
@@ -881,12 +881,12 @@
         "p.add_row(3,2,-1)"
       ],
       "metadata": {
-        "id": "7cwki58O3KIK",
-        "outputId": "f8607a27-4fe0-4f46-a98e-0e29bb988f71",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 152
-        }
+        },
+        "id": "7cwki58O3KIK",
+        "outputId": "f8607a27-4fe0-4f46-a98e-0e29bb988f71"
       },
       "execution_count": 45,
       "outputs": [
@@ -942,12 +942,12 @@
         "sol_z=sp.solve(eq3,z)[0]"
       ],
       "metadata": {
-        "id": "tdFq04Ky7-BN",
-        "outputId": "a9129602-e402-4023-d319-d3449448ad71",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
-        }
+        },
+        "id": "tdFq04Ky7-BN",
+        "outputId": "a9129602-e402-4023-d319-d3449448ad71"
       },
       "execution_count": 58,
       "outputs": [
@@ -970,11 +970,11 @@
         "sol_z"
       ],
       "metadata": {
-        "id": "2Hn6mfNMSC3N",
-        "outputId": "27b40cbe-0796-44fb-c186-8114628be3fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2Hn6mfNMSC3N",
+        "outputId": "27b40cbe-0796-44fb-c186-8114628be3fe"
       },
       "execution_count": 51,
       "outputs": [
@@ -996,12 +996,12 @@
         "g=SymbolicMatrix([[1,1,1,-1],[2,1,1,0],[-1,0,1,-1],[3,2,-1,2]], column_labels=[\"x\",\"y\",\"z\",\"t\"], free_terms=[2,3,0,-1], display_mode='equations')"
       ],
       "metadata": {
-        "id": "xxKiklvrUklH",
-        "outputId": "cf0171a8-b33b-40a8-8f8f-fbbac47a04d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
-        }
+        },
+        "id": "xxKiklvrUklH",
+        "outputId": "cf0171a8-b33b-40a8-8f8f-fbbac47a04d2"
       },
       "execution_count": 61,
       "outputs": [
@@ -1043,12 +1043,12 @@
         "g.add_row(4,2,-2)"
       ],
       "metadata": {
-        "id": "2o18WkAOVnA1",
-        "outputId": "08339bc0-c987-4872-df0a-a5454739a122",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
-        }
+        },
+        "id": "2o18WkAOVnA1",
+        "outputId": "08339bc0-c987-4872-df0a-a5454739a122"
       },
       "execution_count": 62,
       "outputs": [
@@ -1090,12 +1090,12 @@
         "g.add_row(4,3,-1)"
       ],
       "metadata": {
-        "id": "wnHUYghNV467",
-        "outputId": "6cd1fd8d-d8f3-4b66-9bce-472bc151548d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
-        }
+        },
+        "id": "wnHUYghNV467",
+        "outputId": "6cd1fd8d-d8f3-4b66-9bce-472bc151548d"
       },
       "execution_count": 63,
       "outputs": [
@@ -1137,12 +1137,12 @@
         "g.add_row(3,2,1)"
       ],
       "metadata": {
-        "id": "aTqxfhiEWCTf",
-        "outputId": "141a1159-75f7-4651-9b93-49daf88b12bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
-        }
+        },
+        "id": "aTqxfhiEWCTf",
+        "outputId": "141a1159-75f7-4651-9b93-49daf88b12bc"
       },
       "execution_count": 64,
       "outputs": [
@@ -1184,12 +1184,12 @@
         "g.add_row(3,1,-1)"
       ],
       "metadata": {
-        "id": "jyVP97sIWJhf",
-        "outputId": "821ea6a7-5cfd-4045-b71f-e565f18b7726",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
-        }
+        },
+        "id": "jyVP97sIWJhf",
+        "outputId": "821ea6a7-5cfd-4045-b71f-e565f18b7726"
       },
       "execution_count": 65,
       "outputs": [
@@ -1231,12 +1231,12 @@
         "g.add_row(4,3,4)"
       ],
       "metadata": {
-        "id": "1yRW3Q5gWU2h",
-        "outputId": "a629b031-8d51-4d02-db64-aa760385169e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
-        }
+        },
+        "id": "1yRW3Q5gWU2h",
+        "outputId": "a629b031-8d51-4d02-db64-aa760385169e"
       },
       "execution_count": 68,
       "outputs": [
@@ -1284,6 +1284,92 @@
       ],
       "metadata": {
         "id": "830WKPGnW7Im"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sol_t=sp.solve(eq4,t)[0]"
+      ],
+      "metadata": {
+        "id": "LLTv2tA_Y9hL",
+        "outputId": "f0ac12fd-e974-47aa-e2ab-ca0bbc937bb0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "list index out of range",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-76-53c755b20f96>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msol_t\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meq4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t=SymbolicMatrix([[1,1,-1,-1],[2,3,-2,1],[3,0,5,0],[3,2,-1,2]], column_labels=[\"x\",\"y\",\"z\",\"t\"], free_terms=[0,4,0,3], display_mode='equations')"
+      ],
+      "metadata": {
+        "id": "8LNVIQrDaFDq",
+        "outputId": "5f76da83-2600-49e3-8683-15dfa1426dde",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 177
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "**Initial equations:**"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "System of equations:"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "$$\\begin{aligned} 1 x + 1 y - 1 z - 1 t = 0 \\\\ 2 x + 3 y - 2 z + 1 t = 4 \\\\ 3 x +0 y + 5 z +0 t = 0 \\\\ 3 x + 2 y - 1 z + 2 t = 3 \\end{aligned}$$"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t.add_row()"
+      ],
+      "metadata": {
+        "id": "xD9OnCIp5JjW"
       },
       "execution_count": null,
       "outputs": []
