--- a/Notebooks_EN/01_Linear_Algebra/02_Systems_of_Linear_Equations/LA_SoLE_Cramer_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/02_Systems_of_Linear_Equations/LA_SoLE_Cramer_en.ipynb
@@ -190,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "id": "S4GWmu1uVcLU"
       },
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "siGfiddrVcLV",
         "outputId": "27300b21-191a-46c9-9951-9adc85aaec60",
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "lMGMEFwfVcLW",
         "outputId": "ca0cfc4d-b2a3-4ef8-abd2-3910fbcb678a",
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "58Vf9FHFVcLX",
         "outputId": "611733b2-2b63-4a86-a69f-d288cf5872c0",
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "Uq2FWOysVcLX",
         "outputId": "35b2ac9a-2652-4f07-9f25-66e95862cd7a",
@@ -340,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "H-y4R2G9VcLX",
         "outputId": "6f5b061e-979d-4b21-fca5-4b4f17c463c9",
@@ -374,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "s6vUMWaEVcLY",
         "outputId": "9db184ce-b6de-4e8a-d4bb-496002aa13e3",
@@ -404,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "x-cbXntSVcLY",
         "outputId": "abb7f937-95a4-45fb-da45-e3d50392a9a4",
@@ -513,13 +513,13 @@
         "\n",
         "equ1= sp.Eq(2*x1-3*y1,7)\n",
         "equ2= sp.Eq(3*x1+5*y1,2)\n",
-        "C=sp.Matrix([[2,3],[3,5]])\n",
+        "C=sp.Matrix([[2,-3],[3,5]])\n",
         "d=sp.Matrix([7,2])"
       ],
       "metadata": {
         "id": "4r4crxznreoW"
       },
-      "execution_count": 17,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -529,26 +529,26 @@
       ],
       "metadata": {
         "id": "gJtdNKZDucV8",
-        "outputId": "0cba339a-8cb5-4f43-e86b-85da9ca692bc",
+        "outputId": "21def42f-ba32-4ecf-e1d2-43920a796ab0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
         }
       },
-      "execution_count": 19,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Matrix([\n",
-              "[2, 3],\n",
-              "[3, 5]])"
+              "[2, -3],\n",
+              "[3,  5]])"
             ],
-            "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & 3\\\\3 & 5\\end{matrix}\\right]$"
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & -3\\\\3 & 5\\end{matrix}\\right]$"
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 4
         }
       ]
     },
@@ -559,13 +559,13 @@
       ],
       "metadata": {
         "id": "pPXfVAZfugby",
-        "outputId": "aaa2450b-4e99-4b41-cdef-98e3a84bd880",
+        "outputId": "d8c2eb46-d570-4faf-9c36-5bfbee83bc85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
         }
       },
-      "execution_count": 12,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -578,7 +578,7 @@
             "text/latex": "$\\displaystyle \\left[\\begin{matrix}7\\\\2\\end{matrix}\\right]$"
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 5
         }
       ]
     },
@@ -591,26 +591,26 @@
       ],
       "metadata": {
         "id": "p7fd0SImujW1",
-        "outputId": "2a21a01f-f6c0-45bc-fb14-7f9c62de568a",
+        "outputId": "b172cf00-cd53-40b3-a3e3-90d4b41396ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
         }
       },
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Matrix([\n",
-              "[7, 3],\n",
-              "[2, 5]])"
+              "[7, -3],\n",
+              "[2,  5]])"
             ],
-            "text/latex": "$\\displaystyle \\left[\\begin{matrix}7 & 3\\\\2 & 5\\end{matrix}\\right]$"
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}7 & -3\\\\2 & 5\\end{matrix}\\right]$"
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 6
         }
       ]
     },
@@ -623,24 +623,24 @@
       ],
       "metadata": {
         "id": "nm1e78lPvlLB",
-        "outputId": "13a7cbf5-0197-4ddd-8c75-c2ad03b7de9e",
+        "outputId": "26b8e9c3-8474-493a-cf19-c7dc3da1be72",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 37
+          "height": 51
         }
       },
-      "execution_count": 14,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "29"
+              "41/19"
             ],
-            "text/latex": "$\\displaystyle 29$"
+            "text/latex": "$\\displaystyle \\frac{41}{19}$"
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 7
         }
       ]
     },
@@ -656,24 +656,24 @@
       ],
       "metadata": {
         "id": "efHSbQ5twTzu",
-        "outputId": "a1c1fe2d-ac0e-41a3-accf-f021e40ffcc6",
+        "outputId": "e0fa34c4-fd76-4b00-818a-6b5c87271c91",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 37
+          "height": 51
         }
       },
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "-17"
+              "-17/19"
             ],
-            "text/latex": "$\\displaystyle -17$"
+            "text/latex": "$\\displaystyle - \\frac{17}{19}$"
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 8
         }
       ]
     },
@@ -684,12 +684,12 @@
       ],
       "metadata": {
         "id": "rEeS5FeBxSwT",
-        "outputId": "bb588df4-d1fb-4c32-961a-821ba4f2885d",
+        "outputId": "89f92eb0-b5c6-4191-ab60-001dc8dacaa9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -699,7 +699,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 9
         }
       ]
     },
@@ -723,7 +723,7 @@
           "height": 78
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,7 +754,7 @@
           "height": 78
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -787,7 +787,7 @@
           "height": 78
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +820,7 @@
           "height": 37
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -850,7 +850,7 @@
           "height": 78
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -883,7 +883,7 @@
           "height": 37
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -913,7 +913,7 @@
           "height": 78
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -946,7 +946,7 @@
           "height": 37
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -973,7 +973,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1008,7 +1008,7 @@
           "height": 98
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1044,7 +1044,7 @@
           "height": 51
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,7 +1076,7 @@
           "height": 37
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1108,7 +1108,7 @@
           "height": 51
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1140,7 +1140,7 @@
           "height": 37
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1167,7 +1167,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1199,7 +1199,7 @@
           "height": 37
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
