--- a/Notebooks_EN/01_Linear_Algebra/02_Systems_of_Linear_Equations/LA_SoLE_Gauss_en.ipynb
+++ b/Notebooks_EN/01_Linear_Algebra/02_Systems_of_Linear_Equations/LA_SoLE_Gauss_en.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "1IRfisGRaXSw",
         "outputId": "12fc683b-bac8-492a-c64a-ff2bee148a0d",
@@ -512,7 +512,7 @@
           "height": 152
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -559,7 +559,7 @@
           "height": 152
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -606,7 +606,7 @@
           "height": 152
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -653,7 +653,7 @@
           "height": 166
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -695,7 +695,7 @@
       "metadata": {
         "id": "Zh9juW_jfK6a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -733,7 +733,7 @@
       "metadata": {
         "id": "L2eU5AzS3TWt"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -744,7 +744,7 @@
       "metadata": {
         "id": "tdFq04Ky7-BN"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -760,7 +760,7 @@
         "id": "2Hn6mfNMSC3N",
         "outputId": "745874e3-0125-4e94-d5cc-6e07af23fbf4"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -783,7 +783,7 @@
       "metadata": {
         "id": "F7QSghSYgjYb"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -800,7 +800,7 @@
           "height": 37
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -829,7 +829,7 @@
           "height": 39
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,7 +858,7 @@
           "height": 37
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -886,7 +886,7 @@
         "id": "xxKiklvrUklH",
         "outputId": "3fae91c7-aaf7-4098-833f-cd49a454997f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -933,7 +933,7 @@
         "id": "2o18WkAOVnA1",
         "outputId": "bb5161f3-3d6c-411c-a3c7-93cae1ff6d3a"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -980,7 +980,7 @@
         "id": "wnHUYghNV467",
         "outputId": "f2127831-98a9-4a74-d624-f925c78ac370"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1027,7 +1027,7 @@
         "id": "aTqxfhiEWCTf",
         "outputId": "8471b968-fc64-43e0-bb9f-a40b44c31eee"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1074,7 +1074,7 @@
         "id": "jyVP97sIWJhf",
         "outputId": "5577f598-6895-493d-ead9-097d1dc4b587"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1121,7 +1121,7 @@
         "id": "1yRW3Q5gWU2h",
         "outputId": "dffc4a5a-e1c0-4260-dd96-5f1e4e4ab09e"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1160,42 +1160,40 @@
       "source": [
         "x,y,z,t=symbols('x y z t')\n",
         "\n",
-        "eq1=(1*x+1*y+1*z-1*t,2)\n",
-        "eq2=(2*x+1*y+1*z,3)\n",
-        "eq3=(1*z,1)\n",
-        "eq4=(3*t,-3)\n"
+        "eq1=sp.Eq(1*x+1*y+1*z-1*t,2)\n",
+        "eq2=sp.Eq(2*x+1*y+1*z,3)\n",
+        "eq3=sp.Eq(1*z,1)\n",
+        "eq4=sp.Eq(3*t,-3)\n"
       ],
       "metadata": {
         "id": "830WKPGnW7Im"
       },
-      "execution_count": 29,
+      "execution_count": 34,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "sol_t=sp.solve(eq4,t)[0]"
+        "sp.solve(eq4,t)"
       ],
       "metadata": {
         "id": "LLTv2tA_Y9hL",
-        "outputId": "0f0bd05f-5533-45c6-a0ae-a2ace33cd358",
+        "outputId": "1724c6ea-6587-4705-e85f-b43b3741cea5",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": 35,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "list index out of range",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-30-53c755b20f96>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msol_t\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meq4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-1]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
         }
       ]
     },
